--- a/README.Rmd
+++ b/README.Rmd
@@ -103,7 +103,7 @@ modis_percentiles(loaded)
 classified <- modis_classify(loaded)
 
 # Visualize classified image (0 = dryland, 1 = water, 2 = clouds)
-plot(classified, col = c("white", "cornflowerblue", "gray"))
+plot(classified)
 ```
 
 ## References
